--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: "x divided by zero"
-description: # add some text here
+description: This is an space for me discuss and spread my ideias. You are welcome to contribute here, in comments section. :P
 url: http://diegoleite.me
 baseurl: 
 
