--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: "x divided by zero"
+name: x divided by zero
 description: This is an space for me discuss and spread my ideias. You are welcome to contribute here, in comments section. :P
 url: http://diegoleite.me
 baseurl: 
